# simulation_management_ros_tool

./: CMakeLists.txt  CODEOWNERS  LICENSE  README.md  package.xml  setup_workspace.sh
cfg/: LocalizationMgmt.mrtcfg  LocalizationMgmt.rosif  TimeMgmt.mrtcfg  TimeMgmt.rosif
launch/: object_initialization.launch  object_initialization_lanelets.launch  object_removal.launch  simulation_management.launch
launch/params/: localization_mgmt_parameters.yaml
scripts/: object_initialization.py  object_removal.py
src/localization_mgmt/: localization_mgmt.cpp  localization_mgmt.hpp  localization_mgmt_node.cpp  localization_mgmt_types.cpp  localization_mgmt_types.hpp  localization_mgmt_util.cpp  localization_mgmt_util.hpp
src/sim_object_initialization_ros_tool/: object_initialization.py
src/time_mgmt/: time_mgmt.cpp  time_mgmt.hpp  time_mgmt_node.cpp
